--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Decode keystore file
         run: echo "${{ secrets.KEYSTORE_FILE_BASE64 }}" | base64 -d > app/appynittyKeystore.jks
 
+      - name: Give gradlew execute permission
+        run: chmod +x gradlew
+
       - name: Build signed release APK
         run: ./gradlew assembleRelease -x lint
 
