Fix: Hardcode "from" email address in workflow
- Changed the `from` field in the email notification step of the GitHub Actions workflow to use a hardcoded email address "xswapsx@gmail.com" instead of the `secrets.GMAIL_USERNAME` variable.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,6 +48,6 @@ jobs:
           password: ${{ secrets.GMAIL_APP_PASSWORD }}
           subject: "New APK Build - NavigationCompose"
           to: ${{ secrets.EMAIL_RECEIVER }}
-          from: ${{ secrets.GMAIL_USERNAME }}
+          from: "xswapsx@gmail.com" #${{ secrets.GMAIL_USERNAME }}
           body: "Download the latest APK from GitHub Releases."
           attachments: app/build/outputs/apk/release/app-release.apk
