--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,10 +24,12 @@ jobs:
         run: echo "${{ secrets.KEYSTORE_FILE_BASE64 }}" | base64 -d > app/appynittyKeystore.jks
 
       - name: Give gradlew execute permission
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
+        working-directory: ${{ github.workspace }}
 
       - name: Build signed release APK
         run: ./gradlew assembleRelease -x lint
+        working-directory: ${{ github.workspace }}
 
       - name: List APK output folder
         run: ls -R app/build/outputs/apk/
