Ci: Add debug step to print email username
This commit adds a new step to the GitHub Actions workflow to print the email username used for sending the APK. This is for debugging purposes.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,6 +43,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Debug Email Username
+        run: |
+          echo "Using email: ${{ secrets.GMAIL_USERNAME }}"
+
       - name: Send APK via Email
         uses: dawidd6/action-send-mail@v3
         with:
