Ci: Add debug step to print email username
This commit adds a new step to the GitHub Actions workflow to print the email username used for sending the APK. This is for debugging purposes.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,7 @@ jobs:
           username: ${{ secrets.GMAIL_USERNAME }}
           password: ${{ secrets.GMAIL_APP_PASSWORD }}
           subject: "New APK Build - NavigationCompose"
-          to: "xswapsx@gmail.com" #${{ secrets.EMAIL_RECEIVER }}
-          from: "xswapsx@gmail.com" #${{ secrets.GMAIL_USERNAME }}
+          to: ${{ secrets.EMAIL_RECEIVER }}
+          from: ${{ secrets.GMAIL_USERNAME }}
           body: "Download the latest APK from GitHub Releases."
           attachments: app/build/outputs/apk/release/app-release.apk
