Ci: Add debug step to print email username
This commit adds a new step to the GitHub Actions workflow to print the email username used for sending the APK. This is for debugging purposes.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,19 +27,22 @@ jobs:
 
       - name: Give gradlew execute permission
         run: chmod +x ./gradlew
-        working-directory: ${{ github.workspace }} #new
+        working-directory: ${{ github.workspace }}
 
       - name: Build signed release APK
         run: ./gradlew assembleRelease -x lint
-        working-directory: ${{ github.workspace }} #new
+        working-directory: ${{ github.workspace }}
 
       - name: List APK output folder
-        run: ls -R app/build/outputs/apk/
+        run: ls -lh app/build/outputs/apk/release/  # 🟢 Made more specific to show size & file presence
+
+      - name: Rename APK to ZIP  # 🟢 NEW: Rename APK to avoid Gmail block
+        run: mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/app-release.zip
 
       - name: Upload APK to GitHub Releases
         uses: softprops/action-gh-release@v1
         with:
-          files: app/build/outputs/apk/release/app-release.apk
+          files: app/build/outputs/apk/release/app-release.zip  # 🟢 update to zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -57,5 +60,8 @@ jobs:
           subject: "New APK Build - NavigationCompose"
           to: ${{ secrets.EMAIL_RECEIVER }}
           from: ${{ secrets.GMAIL_USERNAME }}
-          body: "Download the latest APK from GitHub Releases."
-          attachments: app/build/outputs/apk/release/app-release.apk
+          body: |
+            ✅ New APK build is ready.
+            📎 APK is attached as a `.zip` file.
+            🔧 Please rename `app-release.zip` to `app-release.apk` before installing.
+          attachments: app/build/outputs/apk/release/app-release.zip  # 🟢 updated
