Feat: Sign release APK in GitHub Actions
- Updated `blank.yml` to list contents of the `app/build/outputs/apk/` directory.
- Removed steps for renaming APK to ZIP as it is no longer needed.
- Updated `Upload APK to GitHub Releases` step to use the unsigned APK.
- Removed debugging step for email username.
- Updated `Send APK via Email` step to attach the unsigned APK and simplified the email body.
- Added `signingConfigs` block in `app/build.gradle.kts` to configure release signing.
- Set `signingConfig` for the release build type to use the newly created `release` signing configuration.
- Used environment variables to retrieve keystore password, key alias, and key password for signing.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,21 +34,14 @@ jobs:
         working-directory: ${{ github.workspace }}
 
       - name: List APK output folder
-        run: ls -lh app/build/outputs/apk/release/  # 🟢 Made more specific to show size & file presence
-
-      - name: Rename APK to ZIP  # 🟢 NEW: Rename APK to avoid Gmail block
-        run: mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/app-release.zip
+        run: ls -R app/build/outputs/apk/
 
       - name: Upload APK to GitHub Releases
         uses: softprops/action-gh-release@v1
         with:
-          files: app/build/outputs/apk/release/app-release.zip  # 🟢 update to zip
+          files: app/build/outputs/apk/release/app-release-unsigned.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Debug Email Username
-        run: |
-          echo "Using email: ${{ secrets.GMAIL_USERNAME }}"
 
       - name: Send APK via Email
         uses: dawidd6/action-send-mail@v3
@@ -60,8 +53,5 @@ jobs:
           subject: "New APK Build - NavigationCompose"
           to: ${{ secrets.EMAIL_RECEIVER }}
           from: ${{ secrets.GMAIL_USERNAME }}
-          body: |
-            ✅ New APK build is ready.
-            📎 APK is attached as a `.zip` file.
-            🔧 Please rename `app-release.zip` to `app-release.apk` before installing.
-          attachments: app/build/outputs/apk/release/app-release.zip  # 🟢 updated
+          body: "Download the attached APK."
+          attachments: app/build/outputs/apk/release/app-release-unsigned.apk
