Fix: Correct secret name for keystore file and remove default values
- Changed `secrets.KEYSTORE_FILE_BASE64` to `secrets.KEYSTORE_BASE64` in the GitHub Actions workflow to correctly decode the keystore file.
- Removed default values for `storePassword`, `keyAlias`, and `keyPassword` in `app/build.gradle.kts` to ensure they are sourced from environment variables.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Build signed release APK
         run: ./gradlew assembleRelease -x lint
         working-directory: ${{ github.workspace }}
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
       - name: List APK output folder
         run: ls -R app/build/outputs/apk/
