Refactor: Improve email notification for new APK builds
- Modified the email body to include a direct download link for the APK from GitHub releases.
- Added the commit SHA to the email body for better traceability.
- Formatted the email body using a multi-line string for improved readability.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,5 +57,10 @@ jobs:
           subject: "New APK Build - NavigationCompose"
           to: ${{ secrets.EMAIL_RECEIVER }}
           from: ${{ secrets.GMAIL_USERNAME }}
-          body: "Download the attached APK."
-          attachments: app/build/outputs/apk/release/app-release.apk
+          body: |
+            A new APK build is available for download:
+
+            👉 [Download APK](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/app-release.apk)
+
+            This was built from commit: ${{ github.sha }}
+      
