--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 .cxx
 local.properties
 /appynittyKeystore.jks.base64.txt
+/app/release/app-release.apk
+/app/release/baselineProfiles/0/app-release.dm
+/app/release/baselineProfiles/1/app-release.dm
+/app/release/output-metadata.json
