--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ local.properties
 /app/release/baselineProfiles/0/app-release.dm
 /app/release/baselineProfiles/1/app-release.dm
 /app/release/output-metadata.json
+/app/build/
